hello/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hello-1
spec:
  host: hello-1
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-1
spec:
  hosts:
    - "*"
  gateways:
    - hello-gateway
  http:
  - match:
    - headers:
        x-hello-1:
          exact: v2
    route:
    - destination:
        host: hello-1
        subset: v2
  - route:
    - destination:
        host: hello-1
        subset: v1
---
